# python-cicd-demo

./: .flake8  Dockerfile  README.md  local-ci.ps1  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: python-ci.yml
.github/workflows/: python-ci.yml
app/: main.py
tests/: test_main.py
